# BatchLocaLLM

./: .env.example  .gitignore  .label_studio_token  .pre-commit-config.yaml  503_ERROR_DIAGNOSIS.md  5K_BATCH_STATUS_AND_TOKEN_ANALYSIS.md  5K_BATCH_TEST_STATUS.md  5K_TEST_READY.md  ABSTRACTION_PROGRESS.md  ACTION_PLAN_TO_COMPLETE.md  ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARISTOTLE_INTEGRATION_COMPLETE.md  AUDIT.md  AUDIT_AND_VISION.md  AUDIT_REPORT.md  AUTO_START_SETUP.md  BATCHLOCALLM_LAUNCH_READY.md  BATCH_API.md  BATCH_API_USAGE.md  BATCH_OPTIMIZATION_ANALYSIS.md  BATCH_OPTIMIZATION_REQUIREMENTS.md  BATCH_SYSTEM_AUDIT.md  BATCH_WEB_APP_ARCHITECTURE.md  BATCH_WEB_APP_SUCCESS.md  BENCHMARKING.md  BENCHMARKING_GUIDE.md  BENCHMARKING_JOURNEY.md  BENCHMARKS.md  BENCHMARK_DATASETS.md  BENCHMARK_EXPLANATION.md  BENCHMARK_PLAN.md  BENCHMARK_STATUS.md  BENCHMARK_SUMMARY.md  BENCHMARK_SYSTEM_PLAN.md  BIDIRECTIONAL_SYNC_COMPLETE.md  CANDIDATE_CURATION_TABLE_COMPLETE.md  CANDIDATE_DISPLAY_FIRST_PRINCIPLES.md  CHANGELOG.md  (+251 more)
.archive/: ADD_TO_ARIS_DOCKER_COMPOSE.yml  ARIS_INTEGRATION.md  BENCHMARK_RUNNER_UI.md  CURRENT_STATUS.md  DEPLOYMENT_DURABILITY.md  DOCUMENTATION_CONSOLIDATION.md  ENVIRONMENT_AND_LOGGING_IMPROVEMENTS.md  ISSUES_AND_FIXES.md  LOGGING_METRICS_TRACING_COMPLETE.md  MODEL_TESTING_ARCHITECTURE.md  PUBLIC_RELEASE_CHECKLIST.md  SYSTEM_STATUS_REPORT.md  TEST_REFACTORING_COMPLETE.md  UNIFIED_WORKFLOW_DESIGN.md  WORKBENCH_COMPLETE.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
ZACKSNOTES/: ARCHITECTURE_VERIFICATION.md  CLEANUP_COMPLETE.md  CLEANUP_STATUS.md  CODE_QUALITY_ASSESSMENT.md  FINE_TUNING_INTEGRATION_COMPLETE.md  FINE_TUNING_SYSTEM_COMPLETE.md  FINE_TUNING_USAGE_GUIDE.md  FINE_TUNING_WORKFLOW_ANALYSIS.md  PHASE_5_WEB_UI_COMPLETE.md  PHASE_6_ABSTRACTION_COMPLETE.md  TYPE_SAFETY_FINAL_REPORT.md  TYPE_SAFETY_IMPROVEMENTS.md
batch_app/: __init__.py  api_server.py  benchmarks.py  database.py  migrate_to_openai_format.py  static_server.py  webhooks.py  worker.py
benchmark_results/: batch-job-batch_a8921ba556f541e5_migrated.json  cache_comparison_1000_20251029_234126.json  cache_comparison_1000_server_parallel_20251030_001140.json  llama32-1b-5k_migrated.json  llama32-3b-5k-2025-10-28_migrated.json  quick_test_100_20251029_233557.json  qwen3-4b-test-10_migrated.json  real_benchmarks_5k_20251028.json  vllm-native-gemma3-4b-5000-2025-10-28_migrated.json
benchmarks/: HOW_TO_RUN_50K.md  cost_analysis_summary.json
config/: label_studio_interface.xml
conquest_schemas/: candidate_evaluation.json  cartographer.json  cv_parsing.json  email_evaluation.json  quil_email.json  report_evaluation.json
core/: README.md  __init__.py  cli.py  config.py  label_studio_ml_backend.py  pyproject.toml
core/batch_app/: api_server.py  benchmarks.py  conquest_api.py  cost_tracking.py  database.py  fine_tuning.py  inference.py  label_studio_integration.py  logging_config.py  metrics.py  migrate_to_openai_format.py  model_installer.py  model_loader.py  model_manager.py  model_parser.py  result_comparison.py  sentry_config.py  smart_offload.py  static_server.py  watchdog.py  webhooks.py  workbench_analytics.py  worker.py
core/batch_app/static/: admin.html  config.html  history.html  history.js  index.html  queue.html  worker-logs.html
core/curation/: __init__.py  api.py  label_studio_client.py  registry.py  schemas.py
core/integrations/: __init__.py  aristotle_db.py
core/plugins/: __init__.py  base.py  hooks.py  registry.py
core/result_handlers/: __init__.py  base.py  database_sync.py  label_studio.py  webhook.py
core/result_handlers/examples/: custom_template.py  postgres_insert.py  s3_upload.py
core/tests/: README.md  __init__.py  conftest.py  requirements-test.txt
core/tests/e2e/: test_batch_workflow.py
core/tests/integration/: __init__.py  run_all_workflows.sh  test_all_workflows.py  test_conquest_workflows.py  test_full_pipeline.py  test_label_studio_integration.py  test_vllm_real.py
core/tests/manual/: test_all_features.py  test_batch_benchmark.py  test_full_e2e.py  test_gemma3_12b_qat.py  test_gemma3_12b_qat_single.py  test_gold_star.py  test_gpt_oss_mxfp4_single.py  test_gpt_oss_single.py  test_granite_3b_single.py  test_hot_swapping.py  test_integration.py  test_llama32_3b.py  test_ollama_gemma3.py  test_olmo2_7b_100.py  test_olmo2_7b_single.py  test_olmo_1b.py  test_optimization.py  test_performance.py  test_performance_benchmarks.py  test_qwen3_4b.py  test_qwen3_4b_5k.py  test_single_request.py  test_system.py  test_webhook.py
core/tests/scripts/: create_test_batch.py
core/tests/unit/: test_api_validation.py  test_benchmarks.py  test_database.py  test_input_validation.py  test_metrics.py  test_result_handlers.py  test_webhooks.py  test_worker_error_handling.py
core/training/: __init__.py  base.py  dataset_exporter.py  metrics.py  unsloth_backend.py
curation_app/: __init__.py  api.py  conquest_schemas.py  label_studio_client.py
docker/: Dockerfile  Dockerfile.batch-api  Dockerfile.curation  docker-compose.yml  docker-compose.yml.old  inference-endpoint-compose.yml
docs/: API.md  ARCHITECTURE.md  AUTO_RECOVERY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ENDPOINTS_AND_HISTORY_REPORT.md  GCP_SECRETS_GUIDE.md  GETTING_STARTED.md  JOB_HISTORY_FEATURE.md  LABEL_STUDIO_SETUP.md  LOGGING_METRICS_AUDIT.md  MULTI_ENVIRONMENT_SETUP.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.0.0.md  SCREENSHOT_GUIDE.md  TROUBLESHOOTING.md  UI_EVOLUTION_ANALYSIS.md  USER_GUIDE.md  WEBHOOKS.md
examples/: README.md  aris_integration.ts  simple_batch.py
monitoring/: aristotle-tray.py  loki-config.yml  prometheus.yml  promtail-config.yml
plugins/: README.md
results/: metadata.json
scripts/: CREATE_GITHUB_REPO.sh  ab_test_cpu_offload.py  add_fp16_models_to_registry.py  add_gemma3_12b_and_gptoss_20b.py  add_gguf_models_to_registry.py  benchmark_bm_9c15eaa0d078.py  benchmark_bm_ea3e17242c81.py  benchmark_gemma3_12b_5k.py  benchmark_gptoss_20b_5k.py  capture-screenshots.sh  (+62 more)
(+225 files in other folders)
