[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-batch-server"
version = "1.0.0"
description = "OpenAI-compatible batch processing server powered by vLLM with integrated data curation system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "vLLM Batch Server Contributors"}
]
keywords = [
    "llm",
    "batch-processing",
    "vllm",
    "openai",
    "inference",
    "gpu",
    "machine-learning",
    "data-curation",
    "label-studio"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver (production-grade)
    "aiosqlite>=0.20.0",  # Legacy SQLite support (for migration only)
    "python-json-logger>=3.2.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.0.0",  # Error tracking and monitoring
    "slowapi>=0.1.9",  # Rate limiting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/zisaacson/vllm-batch-server"
Documentation = "https://github.com/zisaacson/vllm-batch-server/blob/main/README.md"
Repository = "https://github.com/zisaacson/vllm-batch-server"
Issues = "https://github.com/zisaacson/vllm-batch-server/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too noisy with SQLAlchemy and external APIs
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing - enforce where it matters
disallow_incomplete_defs = false  # Allow gradual typing
check_untyped_defs = true  # Still check typed functions
no_implicit_optional = true  # Catch None bugs
warn_redundant_casts = true
warn_unused_ignores = false  # Don't warn about type: ignore comments we added for ORM
warn_no_return = true  # Catch missing returns
strict_equality = true  # Catch == None bugs

# External libraries without type stubs
[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynvml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vllm.*"
ignore_missing_imports = true

# SQLAlchemy ORM - ignore type errors in database models
# The ORM pattern with Column[T] vs T is inherently difficult to type-check
# We rely on tests for correctness here
[[tool.mypy.overrides]]
module = "batch_app.database"
ignore_errors = true

# Worker has heavy ORM usage - allow untyped defs
[[tool.mypy.overrides]]
module = "batch_app.worker"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=batch_app",
    "--cov=result_handlers",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # "--cov-fail-under=80",  # TODO: Enable after adding unit tests
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["batch_app", "result_handlers"]
omit = ["tests/*", "**/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

